@@ -1,3 +1,4 @@
+* Fallback to model name as title
 * Manage deletable and writable state
 * Support e-mail template
 * Send e-mail via the server
